dashboard now dynamically changes every time it is entered

--- a/bugtracker/stackedUI.ui
+++ b/bugtracker/stackedUI.ui
@@ -446,7 +446,8 @@ border-radius: 5px;}</string>
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">color: red;</string>
+        <string notr="true">color: red;
+font-size: 10pt;</string>
        </property>
        <property name="text">
         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:48pt;&quot;&gt;0&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
